--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/sjgjny386/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487474.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/754d9f64807653fe3817fd468111df41-320x200.jpg"><p align="center">【一线采访】优胜教育爆雷 逾千家长老师维权</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484715.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280827022-320x200.jpg"><p align="center">杨威：美国总统选举冲刺摇摆州争270票</p></a>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484715.md#1" title="杨威：美国总统选举冲刺摇摆州争270票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280827022-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487474.md#1" title="【一线采访】优胜教育爆雷 逾千家长老师维权""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/754d9f64807653fe3817fd468111df41-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1" title="【直播】专访《蚕食美国》制片人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487273.md#1" title="拜登电邮门  朱利安尼：将发布更多爆料""><img width="73" src="https://i.epochtimes.com/assets/uploads/2006/11/611140940171508-320x200.jpg">&nbsp;</a>
@@ -11,12 +12,11 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486027.md#1" title="丑闻爆发前 脸书推特高层加入拜登竞选团队""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228999788-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484974.md#1" title="抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/CP18954986-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485477.md#1" title="中共外交官闯台外馆国庆酒会打伤人 台抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/fe83448f748c2ea6be9a1ab534a9a78a-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485442.md#1" title="华为大势已去？跨大西洋联盟打造清洁网络""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://sjgjny386.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487792.md#1">批中共瞒疫 纳瓦罗：这笔账必有到期的一天</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487771.md#1">美制裁六家中企及两中国人 指违反伊朗禁令</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487474.md#1">【一线采访】优胜教育爆雷 逾千家长老师维权</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487792.md#1">批中共瞒疫 纳瓦罗：这笔账必有到期的一天</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487771.md#1">美制裁六家中企及两中国人 指违反伊朗禁令</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
+:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487474.md#1">【一线采访】优胜教育爆雷 逾千家长老师维权</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487724.md#1">【美股瞭望】选前通过纾困案恐是假议题</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487611.md#1">沈舟：习近平再称韩战胜利 到底谁赢了</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -25,6 +25,7 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a><br>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485442.md#1">华为大势已去？跨大西洋联盟打造清洁网络</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484144.md#1">北京租房市场量价齐跌 租金达两年低位</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12476425.md#1">受中共科技专制拖累 科企出国路几近被堵死</a><br>
@@ -40,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,862,535 人
+!共 365,862,747 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
