--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -101,7 +101,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10714814.md#1" target="_blank">川普总统在93号航班9·11悼念仪式上的讲话全文</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/17/n10981686.md#1" target="_blank">两位古琴大师的悲剧：毁琴自尽 文革失踪</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
