--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959503.md#1" target="_blank">佚名：这个“英雄”诞生记让人不寒而栗……</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398576.md#1" target="_blank">国际人权组织东亚负责人：中共是邪恶的</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/2/n11084381.md#1" target="_blank">林辉：中共这些“特别党员”效力后自取其辱</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
