--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10439090.md#1" target="_blank">严家伟：滥杀无辜草菅人命的“镇反运动”</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
